--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             Your browser does not support the video tag.
         </video>
         <div class="overlay">
-            <img src="https://i.imgur.com/mPm0gZh.png" alt="Logotyp" class="hero-logo">
+            <img src="https://i.imgur.com/DODehvJ.png" alt="Logotyp" class="hero-logo">
             <button class="hero-button btn btn-primary mt-3" onclick="scrollToSection('how-it-works')">Hur fungerar det?</button>
             <button class="hero-button btn btn-secondary mt-3" onclick="scrollToSection('quote')">Begär offert</button>
         </div>
