--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 <body>
     <header id="header" class="header navbar navbar-expand-lg navbar-dark fixed-top">
         <div class="container-fluid">
+            <a class="navbar-brand" href="#home">
+                <img src="https://i.imgur.com/DODehvJ.png" alt="Logotyp" class="header-logo">
+            </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
