--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header id="header" class="header navbar navbar-expand-lg navbar-dark fixed-top">
         <div class="container-fluid">
             <a class="navbar-brand" href="#home">
-                <img src="https://i.imgur.com/DODehvJ.png" alt="Logotyp" class="header-logo">
+                <img src="https://i.imgur.com/YDqTBCK.png" alt="Logotyp" class="header-logo">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -35,7 +35,7 @@
             Your browser does not support the video tag.
         </video>
         <div class="overlay">
-            <img src="https://i.imgur.com/DODehvJ.png" alt="Logotyp" class="hero-logo">
+            <img src="https://i.imgur.com/YDqTBCK.png" alt="Logotyp" class="hero-logo">
             <button class="hero-button btn btn-primary mt-3" onclick="scrollToSection('how-it-works')">Hur fungerar det?</button>
             <button class="hero-button btn btn-secondary mt-3" onclick="scrollToSection('quote')">Begär offert</button>
         </div>
