--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Boka Fönsterputs - Fast pris 260 kr</title>
+    <title>Boka Fönsterputs - Fast pris 250 kr</title>
 
     <!-- Bootstrap 4 CSS för modern styling -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
@@ -79,7 +79,7 @@
 <body>
 
 
-        <h2>Förbokning av Fönsterputs hos Putsväck AB</h2>
+        <h2>Förbokning av fönsterputs hos Putsväck AB</h2>
 
         <!-- Fast pris information -->
         <div class="price-info">
