--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
 
             <!-- Bekräftelseknapp -->
             <div class="form-group text-center">
-                <button type="submit" class="btn btn-primary btn-block">Boka nu för 260 kr</button>
+                <button type="submit" class="btn btn-primary btn-block">Boka nu för endast 250 kr</button>
             </div>
         </form>
 
