--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
         <form id="myForm">
             <!-- Namn -->
             <div class="form-group">
-                <label for="name">Namn:</label>
+                <label for="name">Namn & Efternamn:</label>
                 <input type="text" id="name" name="name" class="form-control" placeholder="Ditt namn" required>
             </div>
 
