--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Boka utvändig Fönsterputs - Fast pris 250 kr</title>
 
+    <!-- Open Graph metataggar -->
+    <meta property="og:title" content="Boka utvändig Fönsterputs - Putsväck">
+    <meta property="og:description" content="Boka din fönsterputsning idag för bara 250 kr efter RUT-avdrag!">
+    <meta property="og:image" content="https://i.imgur.com/LWr4TnI.png"> <!-- Bildlänk till din logga -->
+    <meta property="og:url" content="https://si5193.github.io/pk/"> <!-- Din hemsidas URL -->
+    <meta property="og:type" content="website">
+
     <!-- Bootstrap 4 CSS för modern styling -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 
