--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Boka utvändig Fönsterputs - Fast pris 250 kr</title>
 
     <!-- Open Graph metataggar -->
-    <meta property="og:title" content="Boka utvändig Fönsterputs - Putsväck">
+    <meta property="og:title" content="Boka utvändig Fönsterputs - Fast pris 250kr">
     <meta property="og:description" content="Boka din fönsterputsning idag för bara 250 kr efter RUT-avdrag!">
     <meta property="og:image" content="https://i.imgur.com/LWr4TnI.png"> <!-- Bildlänk till din logga -->
     <meta property="og:url" content="https://si5193.github.io/pk/"> <!-- Din hemsidas URL -->
